--- a/depi.yaml
+++ b/depi.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   spark:
     image: bitnami/spark:3.5.0
@@ -7,12 +5,13 @@ services:
     environment:
       - SPARK_MODE=master
     ports:
-      - "7077:7077"   # Spark master
-      - "8080:8080"   # Spark master UI
+      - "7077:7077"
+      - "8080:8080"
+      - "4040:4040"
     volumes:
-      - ./:/data       # Map current folder to /data in container
-
-  spark-worker:
+      - ./shared:/data
+ 
+  spark-worker:  # small pc
     image: bitnami/spark:3.5.0
     container_name: spark-worker
     depends_on:
@@ -21,9 +20,10 @@ services:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
     ports:
-      - "8081:8081"   # Worker UI
+      - "8081:8081"
     volumes:
-      - ./:/data
+      - ./shared:/data
+ 
 
   jupyter:
     image: jupyter/pyspark-notebook:spark-3.5.0
@@ -33,8 +33,46 @@ services:
     environment:
       - PYSPARK_PYTHON=python3
       - SPARK_MASTER=spark://spark:7077
-    command: start-notebook.sh --NotebookApp.token='' --NotebookApp.password=''
     volumes:
-      - ./:/home/jovyan/work  # Map your folder so notebooks + CSV are accessible
+       - ./shared:/data
+
     depends_on:
       - spark
+    command: start-notebook.sh --NotebookApp.token='' --NotebookApp.password=''
+
+
+  namenode:
+    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    container_name: namenode
+    environment:
+      - CLUSTER_NAME=local-hadoop
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    ports:
+      - "9870:9870"
+      - "9000:9000"
+    volumes:
+      - hdfs-namenode:/hadoop/dfs/name
+      - ./shared:/data
+    networks:
+      - default
+
+  datanode:  # small pc
+    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    container_name: datanode
+    environment:
+      - CLUSTER_NAME=local-hadoop
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    ports:
+      - "9864:9864"
+    volumes:
+      - hdfs-datanode:/hadoop/dfs/data
+    depends_on:
+      - namenode
+    networks:
+      - default
+
+       
+
+volumes:
+  hdfs-namenode:
+  hdfs-datanode:
